--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500&family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/animaciones.css">
     <script src="https://kit.fontawesome.com/3f9a10f0e1.js" crossorigin="anonymous"></script>
     <title>DentalLab</title>
 </head>
@@ -26,7 +28,7 @@
         </nav>
     </header>
     <main  class="index wow fadeIn" id="index"> <!-- Inicio de index -->
-    
+        
             <div class="index__titulo">
                 <h2 class="hache2">Dental Lab, excelencia y calidad</h2>
                 <p class="parrafo">Lo mejor para tu boca</p>
@@ -59,5 +61,6 @@
     <script>
     new WOW().init();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
